[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gra-core"
version = "0.1.0"
description = "GRA-Core: Multiverse Nullification & Fractal Agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "AAA AAA" }
]
keywords = ["GRA", "multiverse", "nullification", "agents", "JAX", "PyTorch"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy",
  "jax",
  "jaxlib",
  "torch",
]

[project.urls]
Homepage = "https://github.com/qqewq/gra-core"
Repository = "https://github.com/qqewq/gra-core"
